--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <div class="row h-100">
           <div class="col-lg-7 my-auto">
             <div class="header-content mx-auto">
-              <h1 class="mb-5">Welcome to branching #testdevops class -- vinay</h1>
+              <h1 class="mb-5">Welcome to branching #testdevops class #release branch code-- vinay</h1>
               <a href="#download" class="btn btn-outline btn-xl js-scroll-trigger">Start Now for Free!</a>
             </div>
           </div>
